--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -8,7 +8,7 @@
     <nav class="main-menu-hamburger">
       <ul>
         <li><a href="/criarFicha">Criar Ficha</a></li>
-        <li><a href="/suaFicha">Sua Ficha</a></li>
+        <li><a href="/ficha">Sua Ficha</a></li>
       </ul>
     </nav>
     <nav class="main-menu">
