--- a/src/views/components/footer.ejs
+++ b/src/views/components/footer.ejs
@@ -1,16 +1,17 @@
 <footer>
-    <div class="content-footer">
-        <h2 class="h2-footer">SIGA-NOS</h2>
-        <div class="redesSociais">
-            <a href=""><i class='bx bxl-discord-alt'></i></a>
-            <a href=""><i class='bx bxl-instagram' ></i></a>
-            <a href=""><i class='bx bxl-reddit' ></i></a>
-            <a href=""><i class='bx bxl-twitter' ></i></a>
-            <ul class="ul-footer">
-                <li>Contato</li>
-                <li>Sobre Nós</li>
-                <li> </li>
-            </ul>
-        </div>
+  <div class="content-footer">
+    <h2 class="h2-footer">SIGA-NOS</h2>
+    <div class="redesSociais">
+      <a href=""><i class="bx bxl-discord-alt"></i></a>
+      <a href=""><i class="bx bxl-instagram"></i></a>
+      <a href=""><i class="bx bxl-reddit"></i></a>
+      <a href=""><i class="bx bxl-twitter"></i></a>
+      <ul class="ul-footer">
+        <li>Contato</li>
+        <li>Sobre Nós</li>
+        <li></li>
+      </ul>
     </div>
+  </div>
 </footer>
+<script src="/assets/js/script.js"></script>
