--- a/src/views/components/footer.ejs
+++ b/src/views/components/footer.ejs
@@ -6,11 +6,9 @@
       <a href=""><i class="bx bxl-instagram"></i></a>
       <a href=""><i class="bx bxl-reddit"></i></a>
       <a href=""><i class="bx bxl-twitter"></i></a>
-      <ul class="ul-footer">
-        <li>Contato</li>
-        <li>Sobre Nós</li>
-        <li></li>
-      </ul>
+    </div>
+      <div class="contato-header">
+      <a href='/contato'>Contato</a>
     </div>
   </div>
 </footer>
