--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -7,8 +7,8 @@
     </label>
     <nav class="main-menu-hamburger">
       <ul>
-        <li><a href="/criarFicha">Criar Ficha</a></li>
-        <li><a href="/ficha">Sua Ficha</a></li>
+        <li><div class="header-a"><a href="/criarFicha">Criar Ficha</a></div></li>
+        <li><div class="header-a"><a href="/ficha">Sua Ficha</a></div></li>
       </ul>
     </nav>
     <nav class="main-menu">
