--- a/src/views/ficha.ejs
+++ b/src/views/ficha.ejs
@@ -65,8 +65,7 @@
         </div>
         <div class="health-info">
           <h2>Atributos</h2>
-
-          <ul>
+          <ul class="ul-ficha">
             <li>
               <div id="selected-tcv" style="margin-bottom: 10px">TCV: [ ]</div>
               <!-- TCV fica aqui -->
@@ -131,7 +130,7 @@
           </ul>
 
           <h2>Barras de Vida</h2>
-          <ul class="health-container">
+          <ul class="health-container" >
             <li>
               <span class="attribute-label">PV</span>
               <button class="arrow-button" onclick="alterarVida('pv', -1)">
@@ -666,6 +665,7 @@
                 <input type="number" class="bonus-input" placeholder="Bônus" />
               </li>
             </ul>
+
 
             <div id="notification-area"></div>
           </div>
