--- a/public/style.css
+++ b/public/style.css
@@ -385,6 +385,15 @@ footer{
 
 }
 
+.contato-header {
+    font-family: var(--serif);
+    font-size: 25px;
+    line-height: 20px;
+    letter-spacing: .05em;
+    margin-bottom: 20px;
+    text-align: center;
+    padding: 25px;
+}
 .redesSociais {
     font-family: var(--serif);
     font-size: 45px;
@@ -857,7 +866,7 @@ menu-hamburger
     position: absolute;
     top: 5px;
     left: 5px;
-    z-index: 2;
+    z-index: 9999;
     cursor: pointer;
   }
   .hamburger-menu::after,
@@ -908,8 +917,13 @@ menu-hamburger
     background: var(--background);
     width: 10rem;
     height: 100%;
+    z-index: 999;
+    background-color: var(--cor-azul-escuro-contraste);
   }
   
+  a {
+    color: white;
+  }
   .hamburger-menu:has(input:checked) + nav.main-menu-hamburger {
     translate: 0;
   }
@@ -1296,7 +1310,7 @@ menu-hamburger
     width: 100%;
   }
 
-  ul {
+ .ul-ficha {
     list-style-type: none;
     padding: 20px;
     margin: 0;
@@ -1469,3 +1483,203 @@ transition: width 0.5s ease; /* Animação ao mudar a largura do preenchimento *
     .arrow-button:hover {
         background-color: gray; /* Cor de fundo ao passar o mouse */
     }
+
+
+    /* Pagina de contanto */
+
+    #main-container {
+
+        display: flex;
+        flex-direction: row;
+        height: 100vh;  /* view height*/
+        }
+        
+        #address-container, #form-container {
+        
+        flex: 1 1 0;
+        height: 100%;
+        }
+        
+        /* address container */
+        
+        #address-container {
+        
+        background-image: url('../img/project_bg1.jpg');
+        background-size: cover;
+        background-position-x: -130px ;
+        color: #fff;
+        position: relative;
+        }
+        
+        .fade {
+        
+        width: 100%;
+        height: 100%;
+        background: #000;
+        opacity: .7;
+        }
+        
+        #address-content {
+        
+        position: absolute;
+        top: 25vh;
+        left: 35%;
+        width: 300px;
+        }
+        
+        #address-content h2 {
+        
+        color: #00ad5e;
+        margin-bottom: 15px;
+        position: relative;
+        padding-left: 40px;
+        }
+        
+        #address-content ion-icon {
+        
+        position: absolute;
+        top: 2px;
+        left: 0;
+        }
+        
+        #address-content p {
+        
+        font-weight: bold;
+        margin-bottom: 50px;
+        }
+        
+        
+        /* Form container */
+        
+        #form-container {
+        
+        padding-top: 60px;
+        text-align: center;
+        background-color: var(--cor-azul-escuro-contraste);
+        }
+        
+        #form-container h2 {
+        
+        color: white;
+        margin-bottom: 50px;
+        font-size: 30px;
+        }
+        
+        #contact-form {
+        
+        width: 500px;
+        margin-left: auto;
+        margin-right: auto;
+        text-align: left;
+        }
+        
+        #contact-form input,
+        #contact-form label,
+        #contact-form textarea {
+        
+        display: block;
+        padding: 10px;
+        border: solid 1px var(--cor-azul-escuro);
+        width: 100%;
+        color: white;
+        }
+        
+        #contact-form label {
+        
+        color: white;
+        font-weight: bold;
+        border-bottom: none;
+        }
+        
+        #contact-form input {
+        
+        margin-bottom: 15px;
+        }
+        
+        #contact-form input::placeholder,
+        #contact-form textarea::placeholder {
+        
+        color: #bbb;
+        }
+        
+        #contact-form input[type="submit"] {
+        
+        background-color: #00ad5e;
+        color: #fff;
+        font-size: 16px;
+        font-weight: bold;
+        cursor: pointer;
+        width: 300px;
+        margin: 30px auto;
+        border: 2px solid transparent;
+        transition: .5s;
+        }
+        
+        #contact-form input[type="submit"]:hover {
+        
+        border-color: #00ad5e;
+        color: #00ad5e;
+        background-color: #fff;
+        }
+        
+        
+        /* Mobile */
+        
+        @media(max-width: 450px) {
+        
+        
+        #main-container {
+        
+            height: 100%;
+            flex-wrap: wrap;
+        }
+        
+        #form-container,
+        #address-container {
+        
+            flex: 1 1 100%;
+        }
+        
+        #form-container {
+        
+            order: -1;
+            padding: 20px;
+        }
+        
+        #form-container h2 {
+        
+            margin-bottom: 25px;
+        }
+        
+        #contact-form {
+        
+            width: 100%;
+        }
+        
+        #contact-form input,
+        #contact-form label,
+        #contact-form textarea {
+        
+            border-color: #aaa;
+        }
+        
+        #address-container {
+        
+            background-position: 0;
+            height: 500px;
+        }
+        
+        .fade {
+        
+            opacity: 0.8;
+        }
+        
+        #address-content {
+        
+            top: 25%;
+            left: 25%;
+        }
+        
+        
+        
+        }
