--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -7,7 +7,6 @@
     </label>
     <nav class="main-menu-hamburger">
       <ul>
-        <li><div class="header-a"><a href="/criarFicha">Criar Ficha</a></div></li>
         <li><div class="header-a"><a href="/ficha">Sua Ficha</a></div></li>
       </ul>
     </nav>
@@ -16,6 +15,8 @@
         <li><a href="/index">Home</a></li>
         <li><a href="/noticias">Notícias</a></li>
         <li><a href="/produtos">Produtos</a></li>
+        <li><a href="/compra">compra</a></li>
+        <li><a href="/poscompra">Pós Compra</a></li>
         <li><a href="/logout">Sair</a></li>
       </ul>
     </nav>
