--- a/public/style.css
+++ b/public/style.css
@@ -11,6 +11,19 @@
     margin: 0; padding: 0;
 }
 
+::-webkit-scrollbar{
+    width: 6px;
+}
+
+::-webkit-scrollbar-track{
+    background: transparent;
+}
+
+*::-webkit-scrollbar-thumb {
+    background: var(--cor--branco);
+    border-radius: 10px;
+}
+
 a{
     text-decoration: none;
 }
@@ -773,6 +786,9 @@ footer{
 .msgSucess {
     padding: 1rem 0;
     font-size: 1.2rem;
+    display: flex;
+    align-items: center;
+    justify-content: center;
 }
 
 .msgError,
@@ -792,6 +808,14 @@ footer{
 .msgSucess {
     color: var(--cor-branco-reluzente);
     color: var(--cor-cinza-claro);
+}
+
+.msgSuccess a,
+.msgError a{
+    font-size: 2rem;
+    font-weight: bold;
+    color: var(--cor-vermelho);
+    padding: 0 1rem;
 }
 
 /* Notícias Page */
@@ -851,6 +875,50 @@ footer{
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+/*********************************************
+    estilo da modal delete page e position
+**********************************************/
+
+.content-delete h3 {
+    font-size: 1.8rem;
+}
+
+.content-delete p{
+    font-size: 1.4rem;
+}
+
+.content-delete h3,
+.content-delete p{
+    text-align: center;
+    padding-bottom: 0.5rem;
+}
+
+.btns_delete {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    gap: 2rem;
+    padding-top: 2rem;
+}
+
+.btns_delete button{
+    font-size: 1.3rem;
+    font-weight: bold;
+    padding: 0.2rem 2rem;
+    cursor: pointer;
+    border: 0.1rem solid var(--cor-preto);
+    border-radius: 0.2rem;
+    transition: background 300ms ease-in-out, color 300ms ease-in-out;
+}
+
+.btns_delete button.btn_cancel:hover{
+    background: var(--cor-azul)
+}
+
+.btns_delete button.btn_delete:hover {
+    background: var(--cor-vermelho);
 }
 
 /*********************************************
@@ -1103,10 +1171,16 @@ menu-hamburger
 
 .row-border {
     display: grid;
-    grid-template-columns: 40% 25% 15% 10% 10%;
+    grid-template-columns: 25% 25% 15% 17% 18%;
     border-bottom: 0.2rem solid;
 }
 
+.grid_position {
+    display: grid;
+    grid-template-columns: 60% 20% 20%;
+    border-bottom: 0.2rem solid;
+    align-items: center;
+}
 
 .header-page {
     font-weight: bold;
@@ -1114,6 +1188,22 @@ menu-hamburger
 
 .col {
     padding: 0.5rem 1rem;
+    font-size: 1.3rem;
+}
+
+.col .edit {
+    color: var(--cor-verde);
+    font-weight: bold;
+    border-bottom: 5px solid transparent;
+    transition: border-bottom 300ms ease-in-out;
+}
+
+.col .edit:hover {
+    border-bottom: 5px solid var(--cor-verde);
+}
+
+.col .edit i {
+    font-weight: bold;
 }
 
 .modal,
@@ -1134,7 +1224,7 @@ menu-hamburger
     left: 50%;
     transform: translate(-50%, -50%);
     background: var(--cor-cinza);
-    width: 50%;
+    width: 40%;
     height: 300px;
     display: flex;
     justify-content: center;
@@ -1142,6 +1232,7 @@ menu-hamburger
     position: relative;
     border-radius: 0.8rem;
     box-shadow: 0px 0px 51px 25px rgba(0, 0, 0, 0.75);
+    padding: 2rem;
 }
 
 .modal-add-position form {
@@ -1934,4 +2025,151 @@ transition: width 0.5s ease; /* Animação ao mudar a largura do preenchimento *
   
       .confirmation button:hover {
         background: darkgoldenrod;
+      }
+
+      /* Estilo do Formulario de upload das imagens uploaded */
+
+      .group-images {
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+      }
+
+      .image {
+        padding: 1rem;
+        overflow: hidden;
+        height: 200px;
+        position: relative;
+      }
+
+      .content-form-upload {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+      }
+
+      .content-form-upload form{
+        width: 60%;
+      }
+
+
+      .content-form-upload form .input-upload label {
+        display: flex;
+        justify-content: center;
+        width: 100%;
+        border: 0.13rem solid var(--cor-preto);
+        border-radius: 0.2rem;
+        background: var(--cor-branco);
+        font-size: 1.3rem;
+        padding: 1rem 0;
+        font-weight: bold;
+        cursor: pointer
+      }
+
+      .content-form-upload form .input-upload input{
+        text-align: center;
+        width: 100%;
+      }
+
+      .content-form-upload form .input-upload input::-webkit-file-upload-button {
+        display: none;
+      }
+
+      .content-form-upload form .content-btn{
+        padding: 1rem 0;
+      }
+
+      .content-form-upload form .content-btn button {
+        width: 100%;
+        border: 0.13rem solid var(--cor-preto);
+        border-radius: 0.2rem;
+        font-size: 1.3rem;
+        font-weight: bold;
+        cursor: pointer;
+        transition: background 300ms ease-in-out;
+      }
+
+      .content-form-upload form .content-btn button:hover {
+        background: var(--cor-verde);
+      }
+
+      /*********************************************
+      Estilo Galeria de Imagens
+**********************************************/
+      .container-galeria h3 {
+        font-size: 1.5rem;
+        color: var(--cor-branco);
+      }
+
+      .all_images {
+        display: grid;
+        grid-template-columns: repeat(4, 1fr);
+        padding: 1rem;
+        gap: 1rem;
+        align-items: center;
+        height: 400px;
+        overflow: auto;
+        margin-bottom: 2rem;
+        border: 0.1rem solid var(--cor-cinza-claro);
+      }
+
+      .content_image {
+        background: var(--cor-branco);
+        position: relative;
+        padding: 0.3rem;
+      }
+
+      .show_img {
+        cursor: pointer;
+        height: 100px;
+        overflow: hidden;
+      }
+
+      .show_img img {
+        min-width: 100px;
+      }
+
+      .img_name {
+        position: absolute;
+        opacity: 0;
+        left: -8000px;
+        overflow: hidden;
+      }
+
+      .active color {
+        background: var(--cor-verde);
+      }
+
+      /*********************************************
+Estilo do Login Admin
+**********************************************/
+
+      .form-admin {
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        height: 60vh;
+      }
+
+      .form-admin .form {
+        width: 40%;
+      }
+
+      .form-admin .form h1 {
+        text-align: center;
+        padding-bottom: 2rem;
+      }
+
+      .form-admin .form .form-group .input {
+        position: relative;
+        padding: 1rem 0;
+      }
+
+      .form-admin .form .form-group .input input {
+        font-size: 1.3rem;
+        width: 100%;
+        outline: none;
+        padding: 0.3rem 1rem;
+        border: 0.13rem solid var(--cor-preto);
+        border-radius: 0.2rem;
+        transition: all 300ms ease-in-out;
       }
