--- a/src/views/components/header.ejs
+++ b/src/views/components/header.ejs
@@ -7,7 +7,13 @@
     </label>
     <nav class="main-menu-hamburger">
       <ul>
-        <li><div class="header-a"><a href="/ficha">Sua Ficha</a></div></li>
+        <li>
+          <div class="header-a">
+            <a href="/ficha">Sua Ficha</a>
+          </div>
+        </li>
+        <li></li>
+        <li><a href="/logout">Sair</a></li>
       </ul>
     </nav>
     <nav class="main-menu">
@@ -17,12 +23,12 @@
         <li><a href="/produtos">Produtos</a></li>
         <li><a href="/compra">compra</a></li>
         <li><a href="/poscompra">Pós Compra</a></li>
-        <li><a href="/logout">Sair</a></li>
       </ul>
     </nav>
     <% } else { %>
     <nav class="main-menu">
       <ul>
+        <li><a href="/index">Home</a></li>
         <li><a href="/">Login</a></li>
         <li><a href="/register">Cadastro</a></li>
       </ul>
