--- a/src/views/pages.ejs
+++ b/src/views/pages.ejs
@@ -1,73 +1,93 @@
 <!DOCTYPE html>
 <html lang="pt-br">
   <%- include('components/head') %>
-<body>
-  <main>
-    <div class="content-admin">
-      <%- include('components/menuAdmin') %>
-      <div class="admin-profile">
-        <%- include('components/headerAdmin') %>
-      </div>
-      <div class="content-display">
-        <h1>pages</h1>
-        <div class="content-msg">
-          <% if (msgSuccess) { %>
+  <body>
+    <main>
+      <div class="content-admin">
+        <%- include('components/menuAdmin') %>
+        <div class="admin-profile"></div>
+        <div class="content-display">
+          <h1>Pages</h1>
+          <div class="content-msg">
+            <% if(msgSuccess) { %>
             <div class="msgSuccess">
-          <%= msgSuccess %> <a href="/pages">X</a>
-        </div>
-        <% } %> <% if (msgError) { %>
-          <div class="msgError"><% msgError %> <a href="/pages/">X</a></div>
-        <% } %>
-        </div>
-        <div class="content-list-pages">
-          <div class="btn-create-page"><a href="/pages/createPages">Adicionar uma nova pagina</a>
-          </div>
-          <div class="list-pages">
-            <div class="table">
-             <div class="row">
-              <div class="row-border header-page">
-                <div class="col">Page</div>
-                <div class="col">Position</div>
-                <div class="col">Status</div>
-                <div class="col">Editar</div>
-                <div class="col">Delete</div>
-             </div>
+              <%= msgSuccess %> <a href="/pages">X</a>
             </div>
-            <div class="row">
-              <% pages.forEach(page => { %>
-                <div class="row-border">
-                  <div class="col"><%= page.page_title %></div>
-                  <div class="col"><%= page.position_name %></div>
-                  <div class="col"><%= page.page_status === 1 ? 'Publicado' : 'Rascunho' %>
-                  </div>
-                  <div class="col">
-                    <a href="/pages/editPage/<%= page.page_id %>">Editar</a>
-                  </div>
-                  <div class="col">
-                    <button
-                    onclick="openDeleteModal(`<%= page.page_id %>`, `page.title %>`)" 
-                    id="delete"
-                    data-id="<%= page.page_id %>"> Delete </button>
+            <% } %> <% if(msgError) { %>
+            <div class="msgError"><%= msgError %> <a href="/pages/">X</a></div>
+            <% } %>
+          </div>
+          <div class="content-list-pages">
+            <div class="btn-create-page">
+              <a href="/pages/createPages">Adicionar uma Nova Pagina</a>
+            </div>
+            <div class="list-pages">
+              <div class="table">
+                <div class="row">
+                  <div class="row-border header-page">
+                    <div class="col">Page</div>
+                    <div class="col">Postion</div>
+                    <div class="col">Status</div>
+                    <div class="col">Editar</div>
+                    <div class="col">Delete</div>
                   </div>
                 </div>
-            </div>
-            <% }) %>
-          </div>
-          <div class="modal hide-modal" id="modal">
-            <form action="" method="post">
-              <div class="content-delete" id="content-delete">
-                <h3></h3>
-                <h4>Se voce realmente quer deletar clique em deletar se nao, clique em cancelar</h4>
-                <button id="cancelar" type="reset">Cancelar</button>
-                <button>Delete</button>
+                <div class="row">
+                  <% pages.forEach(page => { %>
+                  <div class="row-border">
+                    <div class="col"><%= page.page_title %></div>
+                    <div class="col"><%= page.position_name %></div>
+                    <div class="col">
+                      <%= page.page_status === 1 ? 'Publicado' : 'Rascunho' %>
+                    </div>
+                    <div class="col">
+                      <a
+                        class="edit"
+                        href="/pages/editPage/<%= page.page_id %>"
+                      >
+                        <i class="bx bxs-edit"></i>
+                        Editar
+                      </a>
+                    </div>
+                    <div class="col">
+                      <a
+                        class="delete"
+                        onclick="openDeleteModal(`<%= page.page_id %>`, `<%= page.page_title %>`)"
+                        id="delete"
+                        data-id="<%= page.page_id %>"
+                        href="#"
+                      >
+                        <i class="bx bxs-trash"></i>
+                        Delete
+                      </a>
+                    </div>
+                  </div>
+                  <% }) %>
+                </div>
+                <div class="modal hide-modal" id="modal">
+                  <form action="" method="post">
+                    <div class="content-delete" id="content-delete">
+                      <p>Você está prestes a deletar a pagina</p>
+                      <h3></h3>
+                      <h4>
+                        Se você realmente quer deletar clique em Deletar se não
+                        clique em Cancelar
+                      </h4>
+                      <div class="btns_delete">
+                        <button class="btn_cancel" id="cancelar" type="reset">
+                          Cancelar
+                        </button>
+                        <button class="btn_delete">Delete</button>
+                      </div>
+                    </div>
+                  </form>
+                </div>
               </div>
-            </form>
+            </div>
           </div>
         </div>
       </div>
-    </div>
-  </div>
-  </main>
-  <%- include('components/script') %>
-</body>
+    </main>
+    <%- include('components/script') %>
+  </body>
 </html>
