--- a/src/views/position.ejs
+++ b/src/views/position.ejs
@@ -2,54 +2,103 @@
 <html lang="pt-br">
   <%- include('components/head') %>
   <body>
-    <%- include('components/header') %>
     <main class="grid-admin">
-        <div class="content-admin">
-            <%- include('components/menuAdmin') %>
-            <div class="admin-profile">
-                <%- include('components/headerAdmin') %>
+      <div class="content-admin">
+        <%- include('components/menuAdmin') %>
+        <div class="admin-profile"></div>
+        <div class="content-display">
+          <div class="content-msg">
+            <% if(msgSuccess) { %>
+            <div class="msgSuccess">
+              <%= msgSuccess %> <a href="/position">X</a>
             </div>
-            <div class="content-display">
-                <div class="content-msg">
-                    <% if(msgSuccess) { %>
-                        <div class="msgSuccess">
-                            <%= msgSuccess %> <a href="/position">X</a>
-                        </div>
-                    <% } %> <% if(msgError) { %>
-                        <div class="msgError">
-                            <%= msgError %> <a href="/position">X</a>
-                        </div>
-                        <% } %>
-                </div>
-                <h1>position</h1>
-                <div class="content-position">
-                    <form action="/position/position" method="post">
-                        <div class="content-add-position">
-                            <h2>Cadastre uma posição</h2>
-                            <div class="cancelar-x" id="cancelar-x">
-                                <a href="#"><i class="bx bxs-x-square"></i></a>
-                            </div>
-                            <div class="input-position-name">
-                                <input
-                                type="text"
-                                name="position_name"
-                                id="position_name"
-                                placeholder="Nome da Posição"/>
-                            </div>
-                            <div class="btn-position">
-                                <button>cadastrar</button>
-                            </div>
-                        </div>
-                    </form>
-                </div>
-                <div class="list-position">
-                    <% position.forEach(position => { %>
-                        <div><%= position.position_name %> </div>
-                        <% }) %>
-                </div>
+            <% } %> <% if(msgError) { %>
+            <div class="msgError">
+              <%= msgError %> <a href="/position">X</a>
             </div>
+            <% } %>
+          </div>
+          <h1>Position</h1>
+          <div class="content-position">
+            <form action="/position/position" method="post">
+              <div class="content-add-position">
+                <h2>Cadastre uma Posição</h2>
+                <div class="input-position-name">
+                  <input
+                    type="text"
+                    name="position_name"
+                    id="position_name"
+                    placeholder="Nome da Posição"
+                  />
+                </div>
+                <div class="btn-position">
+                  <button>Cadastrar Posição</button>
+                </div>
+              </div>
+            </form>
+          </div>
+          <div class="list-position">
+            <div class="table">
+              <div class="row">
+                <div class="grid_position header-page">
+                  <div class="col">Postion</div>
+                  <div class="col">Editar</div>
+                  <div class="col">Delete</div>
+                </div>
+              </div>
+              <div class="row">
+                <% position.forEach(position => { %>
+                <div class="grid_position">
+                  <div class="col"><%= position.position_name %></div>
+                  <div class="col">
+                    <a
+                      class="edit"
+                      href="position/editPosition/<%= position.position_id %>"
+                    >
+                      <i class="bx bxs-edit"></i>
+                      Editar
+                    </a>
+                  </div>
+                  <div class="col">
+                    <a
+                      class="delete"
+                      onclick="openModalDeletePosition(`<%= position.position_id %>`, `<%= position.position_name %>`)"
+                      id="delete"
+                      data-id="<%= position.position_id %>"
+                      href="#"
+                    >
+                      <i class="bx bxs-trash"></i>
+                      Deletar
+                    </a>
+                  </div>
+                </div>
+                <% }) %>
+              </div>
+              <div class="modal hide-modal" id="modal">
+                <form action="" method="post">
+                  <div class="content-delete" id="content-delete">
+                    <p>Você está prestes a deletar a posição</p>
+                    <h3></h3>
+                    <p>
+                      Se você realmente quer deletar clique em Deletar, se não,
+                      clique em Cancelar
+                    </p>
+                    <div class="btns_delete">
+                      <button class="btn_cancel" id="cancelar" type="reset">
+                        Cancelar
+                      </button>
+                      <button class="btn_delete">
+                        <i class="bx bxs-trash"></i>
+                        Deletar
+                      </button>
+                    </div>
+                  </div>
+                </form>
+              </div>
+            </div>
+          </div>
         </div>
-      <h1>Produtos</h1>
+      </div>
     </main>
     <%- include('components/script') %>
   </body>
