--- a/src/views/components/script.ejs
+++ b/src/views/components/script.ejs
@@ -1,1 +1,16 @@
+<script
+  src="https://cdn.tiny.cloud/1/gvy2y97uhkbaedj79tvuzliezokxtozg80rva1llchwkmy3b/tinymce/7/tinymce.min.js"
+  referrerpolicy="origin"
+></script>
+<!-- <script type="application/javascript" src="/tinymce/tinymce.min.js"></script> -->
+<script
+  src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
+  integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
+  crossorigin="anonymous"
+></script>
+<script
+  type="application/javascript"
+  src="/javascripts/my-tinymce-config.js"
+></script>
+
 <script src="/js/scriptAdmin.js"></script>
